# Maabada-Assembler-Project

./: .gitignore  CMakeLists.txt  README.md  main.c
assembler/: assembler  assembler.c  ast.c  ast.h  data_structures.c  data_structures.h  errors.h  extern_symbols.c  extern_symbols.h  first_pass.c  first_pass.h  globals.h  logs.h  makefile  output.c  output.h  pre_assembler.c  pre_assembler.h  preprocessor.c  preprocessor.h  print_ast_utils.c  print_ast_utils.h  second_pass.c  second_pass.h  symbols.c  symbols.h  tables.c  tables.h  temp.c  temp.h  todos.txt  utils.c  utils.h  write_files.c
assembler/examples/1-working-example/: input1.am  input1.as
assembler/examples/2-preprocessing-errors/: input2.as
assembler/examples/3-first-pass-errors/: input3.am  input3.as
assembler/examples/4-second-pass-errors/: input4.am  input4.as
assembler/inputs/: program-wanted.am  program.am  program.as  qa1.as  qa2.as  qa3.as  qa4.as  todos_qa.as  working.as
